fix: header title align

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -19,9 +19,3 @@
   color: #fff;
   text-align: center;
 }
-
-@media (max-width: 1220px) {
-  .container {
-    margin: 0 24px;
-  }
-}
